# AutoNeoAg

./: .gitignore  Autoresearch_for_Bioinformatics.md  blind_eval.py  confirm.py  controller.py  framework_paper_execution_plan.md  framework_phase_execution_record.md  memory_run_comparison.md  plan.md  plan_pre.md  prepare.py  program.md  project.toml  pyproject.toml  research_memory_implementation_plan.md  results.tsv  strict_confirm_run11_postmortem.md  train.py
manifests/: README.md
manifests/hla_immunogenicity/: data_card.md  lockbox_manifest.csv  source_manifest.csv  split_manifest.json  task_policy.md
manifests/neoantigen/: data_card.md  lockbox_manifest.csv  source_manifest.csv  split_manifest.json  task_policy.md
schemas/: codex_worker_output.schema.json
scripts/: bootstrap_full_raw_templates.py  build_hla_pseudoseq_resource.py  download_iedb_hla_i_tcell.py  download_tumoragdb_public_sources.py  install_dtu_tools.sh  materialize_real_holdouts.py  plot_progress.py  plot_run_comparison.py  plot_strict_confirm_trust.py  prepare_campaign_worktree.py  run_strict_confirm_campaign.py  setup_env.sh  summarize_strict_confirm_campaign.py  validate_full_source.py
src/autoneoag/: __init__.py  bootstrap.py  config.py  dataset.py  manifests.py  tasks.py
src/autoneoag/features/: __init__.py  biochem.py  dtu.py  foreignness.py  pseudoseq.py
src/autoneoag/ingest/: __init__.py  full.py  (+1 more)
tests/: test_frontier_runtime.py  test_full_dataset_assembly.py  test_git_ops_preserve.py  test_manual_curated_adapter.py  test_ranking_metrics.py  test_strict_confirm_runtime.py
(+21 files in other folders)
