[project]
name = "autoneoag"
version = "0.1.0"
description = "AutoNeoAg v1 agent-driven neoantigen ranking research scaffold"
readme = "plan.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

